# uptime-operator

./: .gitignore  Dockerfile  README.md  TESTING.md  docker-compose.yml  env.example  main.py  pyproject.toml  setup.py  simulate_scenarios.py  test_end_to_end.py
examples/: example-uptimemonitor.yaml  production-monitor.yaml  simple-monitor.yaml
manifests/: crd.yaml  deployment.yaml  rbac.yaml
tests/: __init__.py  conftest.py  run_tests.py  test_integration.py  test_models.py  test_operator_logic.py  test_real_integration.py  test_scenarios.yaml
uptime_operator/: __init__.py
uptime_operator/clients/: __init__.py  uptime_kuma.py
uptime_operator/handlers/: __init__.py  reconciler.py  startup.py  uptimemonitor.py
uptime_operator/models/: __init__.py  spec.py  status.py
uptime_operator/utils/: __init__.py  config.py  helpers.py
